# conceptio_core

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: docker-image.yml
config/: params.yaml
dockerfiles/: conceptio_core.dockerfile  entrypoint.sh  healthcheck.sh
include/conceptio_core/: entity_management.hpp
launch/: core.xml
src/: entity_management.cpp
