<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conceptio_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mvccogo@gmail.com">mvccogo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>conceptio_interfaces</build_depend>
  <build_depend>rapidjson-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>fmt</build_depend>
  <depend>rclcpp_components</depend>
  
  <depend condition="$ROS_VERSION == 2">libpaho-mqtt-dev</depend>
  <depend condition="$ROS_VERSION == 2">libpaho-mqttpp-dev</depend>
  <exec_depend>fmt</exec_depend>
  <exec_depend>rapidjson-dev</exec_depend>
  <exec_depend>conceptio_interfaces</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
